--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,5 @@
 Version 0.15 (TBD)
+. [NEW] Partial fill support for orders.
 . [NEW] LeastSquaresRegression filter (pyalgotrade.technical.linreg.LeastSquaresRegression). Depends on SciPy.
 . [NEW] MACD technical indicator (pyalgotrade.technical.macd.MACD).
 . [NEW] pyalgotrade.tools.resample and pyalgotrade.dataseries.resampled.ResampledBarDataSeries now support any grouping frequency.
