--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+Version 0.16 (TBD)
+. [NEW] Support for loading Bitcoin Charts historical trades CSV files (pyalgotrade.bitcoincharts.barfeed).
+
 Version 0.15 (30/Mar/2014)
 . [NEW] Xignite support (http://www.xignite.com/).
 . [NEW] Added support for papertrading Bitcoin strategies through Bitstamp.
