--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,6 @@
 Version 0.16 (TBD)
 . [NEW] Support for loading Bitcoin Charts historical trades CSV files (pyalgotrade.bitcoincharts.barfeed).
-. [FIX] Fixed a rounding error bug in pyalgotrade.bitstamp.broker.PaperTradingBroker.
+. [FIX] Fixed a rounding error in pyalgotrade.bitstamp.broker.PaperTradingBroker.
 
 Version 0.15 (30/Mar/2014)
 . [NEW] Xignite support (http://www.xignite.com/).
