Fixed a bug in BarFeed.getCurrentDateTime.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,7 @@ Version 0.16 (TBD)
 . [NEW] Support for downloading and loading bars from Quandl (pyalgotrade.tools.quandl and pyalgotrade.barfeed.quandlfeed).
 . [NEW] Support for loading Bitcoin Charts historical trades CSV files (pyalgotrade.bitcoincharts.barfeed).
 . [FIX] Fixed a rounding error in pyalgotrade.bitstamp.broker.PaperTradingBroker.
+. [FIX] Fixed a bug in BarFeed.getCurrentDateTime.
 
 Version 0.15 (30/Mar/2014)
 . [NEW] Xignite support (http://www.xignite.com/).
