--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,6 +3,7 @@ Version 0.16 (TBD)
 . [NEW] Support for loading Bitcoin Charts historical trades CSV files (pyalgotrade.bitcoincharts.barfeed).
 . [BREAKING CHANGE] pyalgotrade.bitstamp.client.Client was removed and the functionality is now included in pyalgotrade.bitstamp.barfeed.LiveTradeFeed.
 . [BREAKING CHANGE] Strategy.onOrderUpdated now gets called for all order events, included those generated using the position interface.
+. [FIX] Fixed a bug in pyalgotrade.tools.resample and pyalgotrade.dataseries.resampled.ResampledBarDataSeries when using grouping frequencies greater than 1 day.
 . [FIX] Bitstamp BacktestingBroker and PaperTradingBroker will now fail to place orders without enough cash or BTC.
 . [FIX] Fixed a rounding error in pyalgotrade.bitstamp.broker.PaperTradingBroker.
 . [FIX] Fixed a bug in BarFeed.getCurrentDateTime.
