--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+Version 0.17 (TBD)
+. [FIX] Automatically reconnect bitstamp feed if the connection gets closed.
+
 Version 0.16 (31/Aug/2014)
 . [NEW] Added support for live trading Bitcoin strategies through Bitstamp.
 . [NEW] Support for downloading and loading bars from Quandl (pyalgotrade.tools.quandl and pyalgotrade.barfeed.quandlfeed).
