Fixed isse https://github.com/gbeced/pyalgotrade/issues/61.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
 Version 0.18 (TBD)
 . [NEW] Returns analyzer now store datetimes along with each sample. Thanks MatthiasKauer for implementing this.
+. [FIX] Fixed zero division error in StochasticOscillator. Thanks Blake Jennings for reporting this.
 
 Version 0.17 (10/May/2015)
 . [NEW] Hurst exponent technical indicator (pyalgotrade.technical.hurst.HurstExponent).
