--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,7 +1,7 @@
 Version 0.18 (TBD)
 . [NEW] Returns analyzer now store datetimes along with each sample. Thanks MatthiasKauer for implementing this.
 . [FIX] Fixed zero division error in StochasticOscillator. Thanks Blake Jennings for reporting this.
-. [FIX] Fixed a rounding bug in the default fill strategy when calculating the volume left for a given instrument.
+. [FIX] Fixed a rounding bug in the default fill strategy when calculating the volume left for a given instrument. Thanks Markus Trenkwalder for reporting this.
 
 Version 0.17 (10/May/2015)
 . [NEW] Hurst exponent technical indicator (pyalgotrade.technical.hurst.HurstExponent).
