--- a/CHANGELOG
+++ b/CHANGELOG
@@ -5,6 +5,7 @@ Version 0.18 (TBD)
 . [FIX] Was not logging properly in backtesting broker when shares are not integers.
 . [FIX] Added exception handling to optimizer module. Thanks Sergey Cheparev for reporting this.
 . [FIX] Fixed a bug in VWAP calculation when using adjusted values.
+. [FIX] Added a way to change the dataseries.DEFAULT_MAX_LEN value.
 
 Version 0.17 (10/May/2015)
 . [NEW] Hurst exponent technical indicator (pyalgotrade.technical.hurst.HurstExponent).
