--- a/CHANGELOG
+++ b/CHANGELOG
@@ -6,6 +6,7 @@ Version 0.18 (TBD)
 . [FIX] Added exception handling to optimizer module. Thanks Sergey Cheparev for reporting this.
 . [FIX] Fixed a bug in VWAP calculation when using adjusted values.
 . [FIX] Added a way to change the dataseries.DEFAULT_MAX_LEN value.
+. [BREAKING CHANGE] Removed Xignite support (http://www.xignite.com/).
 
 Version 0.17 (10/May/2015)
 . [NEW] Hurst exponent technical indicator (pyalgotrade.technical.hurst.HurstExponent).
