--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,7 @@
 Version 0.18 (TBD)
 . [NEW] Returns analyzer now store datetimes along with each sample. Thanks MatthiasKauer for implementing this.
 . [NEW] Quandl tool to build feed supports mapping column names.
+. [NEW] Bar feeds now support including extra columns besides OHLC values.
 . [FIX] Fixed zero division error in StochasticOscillator. Thanks Blake Jennings for reporting this.
 . [FIX] Fixed a rounding bug in the default fill strategy when calculating the volume left for a given instrument. Thanks Markus Trenkwalder for reporting this.
 . [FIX] Was not logging properly in backtesting broker when shares are not integers.
