--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+Version 0.19 (TBD)
+. [FIX] Fixed a bug in the Event class when unsubscribing and re-subscribing while emitting. Thanks pjz for reporting this.
+
 Version 0.18 (17/Aug/2016)
 . [NEW] Returns analyzer now stores datetimes along with each sample. Thanks MatthiasKauer for implementing this.
 . [NEW] Quandl tool to build feed supports mapping column names.
