--- a/doc/locale/zh_CN/LC_MESSAGES/bar.po
+++ b/doc/locale/zh_CN/LC_MESSAGES/bar.po
@@ -9,70 +9,70 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PyAlgoTrade 0.18\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-09-13 15:35+0800\n"
+"POT-Creation-Date: 2017-05-16 17:19+0800\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 2.3.4\n"
+"Generated-By: Babel 2.4.0\n"
 
 #: ../../bar.rst:2
 msgid "bar -- Instrument prices"
-msgstr ""
+msgstr "bar -- 股票交易价格序列"
 
 #: of pyalgotrade.bar.Bar:1 pyalgotrade.bar.Bars:1 pyalgotrade.bar.Frequency:1
-msgid "基类：:class:`object`"
+msgid "Bases: :class:`object`"
 msgstr ""
 
 #: of pyalgotrade.bar.Frequency:1
 msgid "Enum like class for bar frequencies. Valid values are:"
-msgstr ""
+msgstr "bar数据频率的枚举类，合法的类型有："
 
 #: of pyalgotrade.bar.Frequency:3
 msgid "**Frequency.TRADE**: The bar represents a single trade."
-msgstr ""
+msgstr "**Frequency.TRADE**: 一个bar代表单次交易。"
 
 #: of pyalgotrade.bar.Frequency:4
 msgid ""
 "**Frequency.SECOND**: The bar summarizes the trading activity during 1 "
 "second."
-msgstr ""
+msgstr "**Frequency.SECOND**: 一个bar代表1秒内发生的交易的统计。"
 
 #: of pyalgotrade.bar.Frequency:5
 msgid ""
 "**Frequency.MINUTE**: The bar summarizes the trading activity during 1 "
 "minute."
-msgstr ""
+msgstr "**Frequency.SECOND**: 一个bar代表1分钟内发生的交易的统计。"
 
 #: of pyalgotrade.bar.Frequency:6
 msgid "**Frequency.HOUR**: The bar summarizes the trading activity during 1 hour."
-msgstr ""
+msgstr "**Frequency.SECOND**: 一个bar代表1小时内发生的交易的统计。"
 
 #: of pyalgotrade.bar.Frequency:7
 msgid "**Frequency.DAY**: The bar summarizes the trading activity during 1 day."
-msgstr ""
+msgstr "**Frequency.SECOND**: 一个bar代表1天内发生的交易的统计。"
 
 #: of pyalgotrade.bar.Frequency:8
 msgid "**Frequency.WEEK**: The bar summarizes the trading activity during 1 week."
-msgstr ""
+msgstr "**Frequency.SECOND**: 一个bar代表1周内发生的交易的统计。"
 
 #: of pyalgotrade.bar.Frequency:9
 msgid ""
 "**Frequency.MONTH**: The bar summarizes the trading activity during 1 "
 "month."
-msgstr ""
+msgstr "**Frequency.SECOND**: 一个bar代表1个月内发生的交易的统计。"
 
 #: of pyalgotrade.bar.Bar:1
 msgid ""
 "A Bar is a summary of the trading activity for a security in a given "
 "period."
-msgstr ""
+msgstr "**Frequency.SECOND**: 一个bar代表一只股票在给定周期内的交易的统计。"
 
 #: of pyalgotrade.bar.Bar:4
 msgid "This is a base class and should not be used directly."
-msgstr ""
+msgstr "基类，不能直接使用。"
 
 #: of pyalgotrade.bar.Bar.getDateTime:1
 msgid "Returns the :class:`datetime.datetime`."
@@ -80,23 +80,23 @@ msgstr ""
 
 #: of pyalgotrade.bar.Bar.getOpen:1
 msgid "Returns the opening price."
-msgstr ""
+msgstr "返回bar开价。"
 
 #: of pyalgotrade.bar.Bar.getHigh:1
 msgid "Returns the highest price."
-msgstr ""
+msgstr "返回最高价。"
 
 #: of pyalgotrade.bar.Bar.getLow:1
 msgid "Returns the lowest price."
-msgstr ""
+msgstr "返回最低价。"
 
 #: of pyalgotrade.bar.Bar.getClose:1
 msgid "Returns the closing price."
-msgstr ""
+msgstr "返回bar收价。"
 
 #: of pyalgotrade.bar.Bar.getVolume:1
 msgid "Returns the volume."
-msgstr ""
+msgstr "返回成交量。"
 
 #: of pyalgotrade.bar.Bar.getAdjClose:1
 msgid "Returns the adjusted closing price."
@@ -104,7 +104,7 @@ msgstr ""
 
 #: of pyalgotrade.bar.Bar.getFrequency:1
 msgid "The bar's period."
-msgstr ""
+msgstr "bar的周期"
 
 #: of pyalgotrade.bar.Bar.getTypicalPrice:1
 msgid "Returns the typical price."
@@ -116,6 +116,10 @@ msgstr ""
 
 #: of pyalgotrade.bar.Bars:1
 msgid "A group of :class:`Bar` objects."
+msgstr ""
+
+#: of pyalgotrade.bar.Bars
+msgid "Parameters"
 msgstr ""
 
 #: of pyalgotrade.bar.Bars:3
