--- a/doc/locale/zh_CN/LC_MESSAGES/barfeed.po
+++ b/doc/locale/zh_CN/LC_MESSAGES/barfeed.po
@@ -9,32 +9,45 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PyAlgoTrade 0.18\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-09-13 15:35+0800\n"
+"POT-Creation-Date: 2017-05-16 17:19+0800\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 2.3.4\n"
+"Generated-By: Babel 2.4.0\n"
 
 #: ../../barfeed.rst:4
 msgid "barfeed -- Bar providers"
-msgstr ""
+msgstr "barfeed -- Bar 数据源"
 
 #: of pyalgotrade.barfeed.BaseBarFeed:1
-msgid "基类：:class:`pyalgotrade.feed.BaseFeed`"
+msgid "Bases: :class:`pyalgotrade.feed.BaseFeed`"
 msgstr ""
 
 #: of pyalgotrade.barfeed.BaseBarFeed:1
 msgid "Base class for :class:`pyalgotrade.bar.Bar` providing feeds."
-msgstr ""
+msgstr ":class:`pyalgotrade.bar.Bar` 的基类，提供数据源(feeds)"
+
+#: of pyalgotrade.barfeed.BaseBarFeed
+#: pyalgotrade.barfeed.BaseBarFeed.getDataSeries
+#: pyalgotrade.barfeed.csvfeed.GenericBarFeed
+#: pyalgotrade.barfeed.csvfeed.GenericBarFeed.addBarsFromCSV
+#: pyalgotrade.barfeed.googlefeed.Feed
+#: pyalgotrade.barfeed.googlefeed.Feed.addBarsFromCSV
+#: pyalgotrade.barfeed.ninjatraderfeed.Feed
+#: pyalgotrade.barfeed.ninjatraderfeed.Feed.addBarsFromCSV
+#: pyalgotrade.barfeed.quandlfeed.Feed pyalgotrade.barfeed.yahoofeed.Feed
+#: pyalgotrade.barfeed.yahoofeed.Feed.addBarsFromCSV
+msgid "Parameters"
+msgstr "参数"
 
 #: of pyalgotrade.barfeed.BaseBarFeed:3
 msgid ""
 "The bars frequency. Valid values defined in "
 ":class:`pyalgotrade.bar.Frequency`."
-msgstr ""
+msgstr "bars 频率，合法的频率参 :class:`pyalgotrade.bar.Frequency`."
 
 #: of pyalgotrade.barfeed.BaseBarFeed:4
 #: pyalgotrade.barfeed.csvfeed.GenericBarFeed:10
@@ -48,10 +61,13 @@ msgid ""
 "of items are discarded from the opposite end. If None then "
 "dataseries.DEFAULT_MAX_LEN is used."
 msgstr ""
+":class:`pyalgotrade.dataseries.bards.BarDataSeries` 保存的最大条目数。一旦"
+"达到最大条目数，添加新的条目后，同等数量的最旧的条目将会被删除。如果为 None "
+"则使用 dataseries.DEFAULT_MAX_LEN is used."
 
 #: of pyalgotrade.barfeed.BaseBarFeed:10 pyalgotrade.barfeed.csvfeed.BarFeed:4
 msgid "This is a base class and should not be used directly."
-msgstr ""
+msgstr "基类，不能直接使用"
 
 #: of pyalgotrade.barfeed.BaseBarFeed.getNextBars:1
 msgid ""
@@ -91,6 +107,10 @@ msgstr ""
 msgid "Instrument identifier. If None, the default instrument is returned."
 msgstr ""
 
+#: of pyalgotrade.barfeed.BaseBarFeed.getDataSeries
+msgid "Return type"
+msgstr ""
+
 #: of pyalgotrade.barfeed.BaseBarFeed.getDataSeries:5
 msgid ":class:`pyalgotrade.dataseries.bards.BarDataSeries`."
 msgstr ""
@@ -100,7 +120,7 @@ msgid "CSV"
 msgstr ""
 
 #: of pyalgotrade.barfeed.csvfeed.BarFeed:1
-msgid "基类：:class:`pyalgotrade.barfeed.membf.BarFeed`"
+msgid "Bases: :class:`pyalgotrade.barfeed.membf.BarFeed`"
 msgstr ""
 
 #: of pyalgotrade.barfeed.csvfeed.BarFeed:1
@@ -111,7 +131,7 @@ msgstr ""
 #: pyalgotrade.barfeed.googlefeed.Feed:1
 #: pyalgotrade.barfeed.ninjatraderfeed.Feed:1
 #: pyalgotrade.barfeed.yahoofeed.Feed:1
-msgid "基类：:class:`pyalgotrade.barfeed.csvfeed.BarFeed`"
+msgid "Bases: :class:`pyalgotrade.barfeed.csvfeed.BarFeed`"
 msgstr ""
 
 #: of pyalgotrade.barfeed.csvfeed.GenericBarFeed:1
@@ -248,14 +268,15 @@ msgid "Quandl"
 msgstr ""
 
 #: of pyalgotrade.barfeed.quandlfeed.Feed:1
-msgid "基类：:class:`pyalgotrade.barfeed.csvfeed.GenericBarFeed`"
+msgid "Bases: :class:`pyalgotrade.barfeed.csvfeed.GenericBarFeed`"
 msgstr ""
 
 #: of pyalgotrade.barfeed.quandlfeed.Feed:1
 msgid ""
 "A :class:`pyalgotrade.barfeed.csvfeed.BarFeed` that loads bars from CSV "
 "files downloaded from Quandl."
-msgstr ""
+msgstr ":class:`pyalgotrade.barfeed.csvfeed.BarFeed` 从 Quandl 下载的 CSV "
+"文件中加载 bars 数据。"
 
 #: ../../barfeed.rst:38
 msgid "Ninja Trader"
@@ -265,15 +286,17 @@ msgstr ""
 msgid ""
 "A :class:`pyalgotrade.barfeed.csvfeed.BarFeed` that loads bars from CSV "
 "files exported from NinjaTrader."
-msgstr ""
+msgstr ":class:`pyalgotrade.barfeed.csvfeed.BarFeed` ，从 NinjaTrade "
+"导出的 CSV 文件中加载 bars 数据。"
 
 #: of pyalgotrade.barfeed.ninjatraderfeed.Feed:3
 msgid ""
 "The frequency of the bars. Only **pyalgotrade.bar.Frequency.MINUTE** or "
 "**pyalgotrade.bar.Frequency.DAY** are supported."
-msgstr ""
+msgstr "bars 的频率，只支持 **pyalgotrade.bar.Frequency.MINUTE** 或 "
+"**pyalgotrade.bar.Frequency.DAY**"
 
 #: of pyalgotrade.barfeed.ninjatraderfeed.Feed.addBarsFromCSV:6
 msgid "The path to the file."
-msgstr ""
+msgstr "文件的路径"
 
