--- a/doc/locale/zh_CN/LC_MESSAGES/bitstamp_ref.po
+++ b/doc/locale/zh_CN/LC_MESSAGES/bitstamp_ref.po
@@ -9,14 +9,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PyAlgoTrade 0.18\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-09-13 15:35+0800\n"
+"POT-Creation-Date: 2017-05-16 17:19+0800\n"
 "PO-Revision-Date: 2016-09-17 15:35+0800\n"
 "Last-Translator: qytz <hhhhhf@foxmail.com>\n"
 "Language-Team: msgroup <https://github.com/msgroup>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 2.3.4\n"
+"Generated-By: Babel 2.4.0\n"
 
 #: ../../bitstamp_ref.rst:2
 msgid "bitstamp -- Bitstamp reference"
@@ -30,12 +30,14 @@ msgstr "WebSocket"
 msgid ""
 "This package has classes for the events emitted by Bitstamp's streaming "
 "service. Check https://www.bitstamp.net/websocket/ for more information."
-msgstr "本模块包含用于处理 Bitstamp streaming 服务触发的事件的类，"
-"可访问 https://www.bitstamp.net/websocket/ 获取更多信息。"
+msgstr ""
+"本模块包含用于处理 Bitstamp streaming 服务触发的事件的类，可访问 "
+"https://www.bitstamp.net/websocket/ 获取更多信息。"
 
 #: of pyalgotrade.bitstamp.wsclient.OrderBookUpdate:1
 #: pyalgotrade.bitstamp.wsclient.Trade:1
-msgid "基类：:class:`pyalgotrade.websocket.pusher.Event`"
+#, fuzzy
+msgid "Bases: :class:`pyalgotrade.websocket.pusher.Event`"
 msgstr "基类：:class:`pyalgotrade.websocket.pusher.Event`"
 
 #: of pyalgotrade.bitstamp.wsclient.OrderBookUpdate:1
@@ -92,12 +94,19 @@ msgid "Feeds"
 msgstr "数据源"
 
 #: of pyalgotrade.bitstamp.barfeed.LiveTradeFeed:1
-msgid "基类：:class:`pyalgotrade.barfeed.BaseBarFeed`"
+#, fuzzy
+msgid "Bases: :class:`pyalgotrade.barfeed.BaseBarFeed`"
 msgstr "基类：:class:`pyalgotrade.barfeed.BaseBarFeed`"
 
 #: of pyalgotrade.bitstamp.barfeed.LiveTradeFeed:1
 msgid "A real-time BarFeed that builds bars from live trades."
 msgstr "基于实盘交易的实时数据源。"
+
+#: of pyalgotrade.bitstamp.barfeed.LiveTradeFeed
+#: pyalgotrade.bitstamp.broker.LiveBroker
+#: pyalgotrade.bitstamp.broker.PaperTradingBroker
+msgid "Parameters"
+msgstr ""
 
 #: of pyalgotrade.bitstamp.barfeed.LiveTradeFeed:3
 msgid ""
@@ -106,16 +115,16 @@ msgid ""
 "bounded length is full, when new items are added, a corresponding number "
 "of items are discarded from the opposite end. If None then "
 "dataseries.DEFAULT_MAX_LEN is used."
-msgstr ":class:`pyalgotrade.dataseries.bards.BarDataSeries` 存储的值的最大数量。如果不是 None，"
-"则必须是大于0的整数。一旦达到最大值，新的数据添加时会丢弃掉同等数量的老数据。若为 None， "
-"则使用 dataseries.DEFAULT_MAX_LEN 。"
+msgstr ""
+":class:`pyalgotrade.dataseries.bards.BarDataSeries` 存储的值的最大数量。如果不是 "
+"None，则必须是大于0的整数。一旦达到最大值，新的数据添加时会丢弃掉同等数量的老数据。若为 None， 则使用 "
+"dataseries.DEFAULT_MAX_LEN 。"
 
 #: of pyalgotrade.bitstamp.barfeed.LiveTradeFeed:9
 msgid ""
 "Note that a Bar will be created for every trade, so open, high, low and "
 "close values will all be the same."
-msgstr ":class:`pyalgotrade.bar.Bar` 的实例会在每次交易时创建，"
-"因此开盘价，最高价，最低价和收盘价都是一样的。"
+msgstr ":class:`pyalgotrade.bar.Bar` 的实例会在每次交易时创建，因此开盘价，最高价，最低价和收盘价都是一样的。"
 
 #: of pyalgotrade.bitstamp.barfeed.LiveTradeFeed.getOrderBookUpdateEvent:1
 msgid "Returns the event that will be emitted when the orderbook gets updated."
@@ -129,6 +138,10 @@ msgstr "事件处理器需要接受如下参数："
 msgid "A :class:`pyalgotrade.bitstamp.wsclient.OrderBookUpdate` instance."
 msgstr ":class:`pyalgotrade.bitstamp.wsclient.OrderBookUpdate` 的实例。"
 
+#: of pyalgotrade.bitstamp.barfeed.LiveTradeFeed.getOrderBookUpdateEvent
+msgid "Return type"
+msgstr ""
+
 #: of pyalgotrade.bitstamp.barfeed.LiveTradeFeed.getOrderBookUpdateEvent:6
 msgid ":class:`pyalgotrade.observer.Event`."
 msgstr ":class:`pyalgotrade.observer.Event`."
@@ -138,7 +151,8 @@ msgid "Brokers"
 msgstr "经纪商"
 
 #: of pyalgotrade.bitstamp.broker.PaperTradingBroker:1
-msgid "基类：:class:`pyalgotrade.bitstamp.broker.BacktestingBroker`"
+#, fuzzy
+msgid "Bases: :class:`pyalgotrade.bitstamp.broker.BacktestingBroker`"
 msgstr "基类：:class:`pyalgotrade.bitstamp.broker.BacktestingBroker`"
 
 #: of pyalgotrade.bitstamp.broker.PaperTradingBroker:1
@@ -182,7 +196,8 @@ msgid "SELL_SHORT orders are mapped to SELL orders."
 msgstr "SELL_SHORT orders are mapped to SELL orders."
 
 #: of pyalgotrade.bitstamp.broker.LiveBroker:1
-msgid "基类：:class:`pyalgotrade.broker.Broker`"
+#, fuzzy
+msgid "Bases: :class:`pyalgotrade.broker.Broker`"
 msgstr "基类：:class:`pyalgotrade.broker.Broker`"
 
 #: of pyalgotrade.bitstamp.broker.LiveBroker:1
