--- a/doc/locale/zh_CN/LC_MESSAGES/twitter_ref.po
+++ b/doc/locale/zh_CN/LC_MESSAGES/twitter_ref.po
@@ -9,14 +9,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PyAlgoTrade 0.18\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-09-13 15:35+0800\n"
+"POT-Creation-Date: 2017-05-16 17:19+0800\n"
 "PO-Revision-Date: 2016-09-17 15:35+0800\n"
 "Last-Translator: qytz <hhhhhf@foxmail.com>\n"
 "Language-Team: msgroup <https://github.com/msgroup>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 2.3.4\n"
+"Generated-By: Babel 2.4.0\n"
 
 #: ../../twitter_ref.rst:2
 msgid "twitter -- Twitter feed reference"
@@ -27,7 +27,8 @@ msgid "Feed"
 msgstr "数据源"
 
 #: of pyalgotrade.twitter.feed.TwitterFeed:1
-msgid "基类：:class:`pyalgotrade.observer.Subject`"
+#, fuzzy
+msgid "Bases: :class:`pyalgotrade.observer.Subject`"
 msgstr "基类：:class:`pyalgotrade.observer.Subject`"
 
 #: of pyalgotrade.twitter.feed.TwitterFeed:1
@@ -35,9 +36,13 @@ msgid ""
 "Class responsible for connecting to Twitter's public stream API and "
 "dispatching events. Check https://dev.twitter.com/docs/streaming-"
 "apis/streams/public for more information."
-msgstr "此类负责连接推特的开放流 API （public stream API）并分发事件。访问 "
-"https://dev.twitter.com/docs/streaming-apis/streams/public "
-"获取更多信息。"
+msgstr ""
+"此类负责连接推特的开放流 API （public stream API）并分发事件。访问 https://dev.twitter.com/docs"
+"/streaming-apis/streams/public 获取更多信息。"
+
+#: of pyalgotrade.twitter.feed.TwitterFeed
+msgid "Parameters"
+msgstr ""
 
 #: of pyalgotrade.twitter.feed.TwitterFeed:4
 msgid "Consumer key."
@@ -61,8 +66,7 @@ msgid ""
 "delivered on the stream. A phrase may be one or more terms separated by "
 "spaces, and a phrase will match if all of the terms in the phrase are "
 "present in the Tweet, regardless of order and ignoring case."
-msgstr "用于决定推送哪些推特事件的条件（phrase）列表。一个条件可以是空格分割的一或多个条款，"
-"如果该条件中所有的条款（忽略大小写及顺序）在该条推特上都有呈现，则符合此条件。"
+msgstr "用于决定推送哪些推特事件的条件（phrase）列表。一个条件可以是空格分割的一或多个条款，如果该条件中所有的条款（忽略大小写及顺序）在该条推特上都有呈现，则符合此条件。"
 
 #: of pyalgotrade.twitter.feed.TwitterFeed:16
 msgid ""
@@ -93,8 +97,7 @@ msgid ""
 "Subscribe to Twitter events. The event handler will receive a dictionary "
 "with the data as defined in: https://dev.twitter.com/docs/streaming-"
 "apis/messages#Public_stream_messages."
-msgstr "订阅推特事件，事件处理器会收到 "
-"https://dev.twitter.com/docs/streaming-apis/messages#Public_stream_messages "
-"中所定义数据格式的字典。"
-
+msgstr ""
+"订阅推特事件，事件处理器会收到 https://dev.twitter.com/docs/streaming-"
+"apis/messages#Public_stream_messages 中所定义数据格式的字典。"
 
