Updated changelog: Removed support for downloading bars from Yahoo Finance.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,6 +3,7 @@ Version 0.19 (TBD)
 . [FIX] Fixed a race condition in the local optimizer that was sometimes getting blocked waiting for workers.
 . [FIX] Fixed a bug while generating nonces for Bitstamp. Thanks pjz for reporting this.
 . [FIX] Fixed callback for BaseStrategy.resampleBarFeed to match onBars prototype.
+. [BREAKING CHANGE] Removed support for downloading bars from Yahoo Finance.
 
 Version 0.18 (17/Aug/2016)
 . [NEW] Returns analyzer now stores datetimes along with each sample. Thanks MatthiasKauer for implementing this.
