--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
 Version 0.19 (TBD)
 . [NEW] Added batchSize parameter to optimizer component. Thanks micmicmichael for implementing this.
+. [NEW] Added savePlot to the plotter to save the plot to a file. Thanks Kimble Young for implementing this.
 . [FIX] Fixed a bug in the Event class when unsubscribing and re-subscribing while emitting. Thanks pjz for reporting this.
 . [FIX] Fixed a race condition in the local optimizer that was sometimes getting blocked waiting for workers.
 . [FIX] Fixed a bug while generating nonces for Bitstamp. Thanks pjz for reporting this.
