Fixed Bitstamp support

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+Version 0.21 (TBD)
+. [FIX] Fixed Bitstamp support.
+
 Version 0.20 (20/Aug/2018)
 . [NEW] Added support for Python 3.7.
 . [NEW] Added setShares method for back-testing broker. Thanks winkidney for implementing this.
